05_bind-service-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bind-service-statefulset
  labels:
    app: bind-service-statefulset
spec:
  ports:
    - port: 53
      name: dns-server
  selector:
    app: bind-statefulset
